--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>LookCraftNetwork</title>
+    <link rel="shortcut icon" href="img/brand.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/a955b1b028.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet"> 
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="Tienda.html">Tienda</a>
+            <a href="https://lookcraftnetwork.nhforums.net/vote/" target="_blank">Votar</a>
+            <a href="https://lookcraftnetwork.nhforums.net/forum/" target="_blank">Foro</a>
+        </nav>
+        <section class="textos-header">
+            <h1>Bienvenidos a LookCraftNetwork</h1>
+            <h2>Para mas informacion consulta nuestras redes sociales</h2>
+        </section>
+        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+                style="height: 100%; width: 100%;">
+                <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: #fff;"></path>
+            </svg></div>
+    </header>
+    <main>
+        <section class="contenedor sobre-nosotros">
+            <div class="contenedor-sobre-nosotros">
+                <img src="img/brand.png" alt="" class="imagen-about-us">
+                <div class="contenido-textos">
+                    <h2 class="titulo">LookCraft Network</h2>
+                    <p>Somos una pequeña comunidad de minecraft por eso 
+                        nuestra comunidad tiene la mision es entretener
+                        a los usuarios que juegan en nuestra network y tambien
+                        que se diviertan en nuesto servidors que esperas
+                          ¡Entra ya!</p> 
+                <ul class="sci">    
+                    <li><a href="https://twitter.com/LookCraftNT?s=09" target="_blank">Twitter</a></li>
+                    <li><a href="https://www.instagram.com/lookcraftnt/" target="_blank">Instagram</a></li>
+                    <li><a href="https://www.youtube.com/channel/UC8Y3iS8NhQPwcD4NPLjerMQ" target="_blank">Youtube</a></li>
+                    <li><a href="https://discord.gg/GpByAEE" target="_blank">Discord</a></li>
+                </ul>
+                </div>
+                <body>  
+                </body>
+            </div>
+            </div>
+        </div>
+        <h1 class= "titulo-final">Pagina desarrollada por Sphinix</h1>
+        <h2 class="titulo-final">&copy; Copyright LookCraft. Todo los derechos resevados</h2>
+    </footer>
+</body>
+</html>
